  * Use XDG-defined data directories to look up fonts files both while using
    FreeType2 and the standard bitmap fonts for OSD.
  * Replace internal libdts 0.0.2 with libdca 0.0.5, and contextually move it
    to contrib/libdca to separate from xine's own code.

xine-lib (1.1.7) (unreleased)
  * Support libdca (new name for libdts) by shuffling around the dts.h file.

xine-lib (1.1.6)
  * Split the DirectFB plugin into X11 and non-X versions.
  * Improve the Mac OS X video output plugin. Thanks to Matt Messier.
  * Fixed the XcbXv plugin - an empty plugin would be built if "old" Xv
    isn't detected.
  * Reworked the channels.conf file handling in the DVB plugin. Previously,
    with junk content, the plugin could potentially consume lots of memory
    (possibly causing a local DoS). Also, a few small memory leaks have been
    eliminated.
  * Fixed a CDDA-related crash and a DVD-related hang, both caused by the
    same change in 1.1.5.

xine-lib (1.1.5)
  * Security fixes:
    - Fix heap overflow in DMO loader. (CVE-2007-1246) [bug #1676925]
      Thanks to Kees Cook for reporting.
  * Improved PulseAudio plugin, now only one connection per instance is opened
    and the mainloop is threaded to reduce latency during playback.
  * Added XCB-based output plugins (Xv and XShm), to use in software using
    XCB to talk with the server rather than libX11 (like new Kaffeine).
    The plugins are contributed by Christoph Pfister with the help of
    Vincent Torri, Jamey Sharp and Christophe Thommeret.
  * Fix race condition in alsa audio out driver.
  * Fixed a crash in the eq2 plugin. [Bug 1644312]
  * Fixed content type detection for AAC (seekable) streams with ID3v2
    tags prefixed clobbering the preview buffer, by skipping over the tag.
  * Parse ID3v2 tags on AAC and FLAC files, as well as mp3 files.
  * Priority of the AAC encoder is now lower than anything else, so
    it's not going to crash xine down if you try to run an mp3 stream
    on FAAD2.