@@ -21,6 +21,7 @@ xine-lib (1.1.90) (Unreleased)
 
 xine-lib (1.1.7) (unreleased)
   * Support libdca (new name for libdts) by shuffling around the dts.h file.
+  * Add support for MDHD version 1 atom in demux_qt. [bug #1679398]
 
 xine-lib (1.1.6)
   * Split the DirectFB plugin into X11 and non-X versions.
